fix: text overflow in mobile

--- a/style.css
+++ b/style.css
@@ -704,6 +704,10 @@ h1 {
     margin-right: 0px;
   }
 
+  .card-button:hover {
+    font-size: 14px;
+  }
+
   .card-button-area {
     margin-left: 0px;
     margin-top: 20px;
